--- a/manifest.json
+++ b/manifest.json
@@ -27,7 +27,7 @@
   "content_scripts": [
     {
       "matches": ["*://*/*"],
-      "js": ["content.js"]
+      "js": ["timer-content.js"]
     }
   ],
   "options_page": "options/options.html"
